--- a/FinalProject/FinalProject.vcxproj.filters
+++ b/FinalProject/FinalProject.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClCompile Include="boundary.cpp">
       <Filter>Source Files\OpenGL Abstractions</Filter>
     </ClCompile>
+    <ClCompile Include="slider.cpp">
+      <Filter>Source Files\Qt Widgets\GUI Components</Filter>
+    </ClCompile>
+    <ClCompile Include="modelattrslide.cpp">
+      <Filter>Source Files\Qt Widgets\Pages\Scene Editor\Object Setter</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -211,9 +217,6 @@
     </ClInclude>
     <ClInclude Include="logger.h">
       <Filter>Header Files\Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="modelsetter.h">
-      <Filter>Header Files\Qt Widgets\Pages\Scene Editor\Object Setter</Filter>
     </ClInclude>
     <ClInclude Include="illuminer.h">
       <Filter>Header Files\OpenGL Abstractions</Filter>
@@ -273,6 +276,15 @@
     </QtMoc>
     <QtMoc Include="modelthumbnailwidget.h">
       <Filter>Header Files\Qt Widgets\Pages\Scene Editor\Object Selector</Filter>
+    </QtMoc>
+    <QtMoc Include="modelsetter.h">
+      <Filter>Header Files\Qt Widgets\Pages\Scene Editor\Object Setter</Filter>
+    </QtMoc>
+    <QtMoc Include="slider.h">
+      <Filter>Header Files\Qt Widgets\GUI Components</Filter>
+    </QtMoc>
+    <QtMoc Include="modelattrslide.h">
+      <Filter>Header Files\Qt Widgets\Pages\Scene Editor\Object Setter</Filter>
     </QtMoc>
   </ItemGroup>
   <ItemGroup>
